--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,11 @@
     <string name="stop_countdown">Stop</string>
     <string name="hello_first_fragment">10:00</string>
 
+
     <!--THIS IS FOR THE LOGIN-->
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Report</string>
-    <string name="menu_slideshow">Profile</string>
+    <string name="menu_report">Report</string>
+    <string name="menu_profile">Profile</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -27,5 +28,6 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="menu_logout">"Logout"</string>
     <string name="user_page" />
 </resources>
